# cc-python

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: ci.yml  semantic_pull_requests.yml
django/: README.md  cookiecutter.json
django/hooks/: post_gen_project.py
django/{{ cookiecutter.project_slug }}/: .env.example  .gitignore  .gitlab-ci.yml  README.md  manage.py  pyproject.toml  renovate.json  ruff.toml
django/{{ cookiecutter.project_slug }}/.gitlab/: Dockerfile  docker-compose.staging.yml
django/{{ cookiecutter.project_slug }}/.gitlab/ci/: deploy.gitlab-ci.yml  lint.gitlab-ci.yml  test.gitlab-ci.yml
django/{{ cookiecutter.project_slug }}/common/: admin.py  management_command.py  models.py  test_utils.py
django/{{ cookiecutter.project_slug }}/common/drf/: __init__.py  filters.py  renderers.py  view_set_mixins.py
django/{{ cookiecutter.project_slug }}/users/: admin.py  models.py
django/{{ cookiecutter.project_slug }}/users/migrations/: 0001_initial.py
django/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: asgi.py  drf_exception_handler.py  urls.py  wsgi.py
django/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/settings/: base.py  local.py  staging.py  test.py
