[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "django>=5.2.3",
    "django-admin-interface>=0.30.0",
    "django-debug-toolbar>=5.2.0",
    {% if cookiecutter.use_drf == "y" %}
    "djangorestframework>=3.16.0",
    "django-cors-headers>=4.7.0",
    "drf-spectacular>=0.28.0",
    {% endif %}
    "django-environ>=0.12.0",
    "psycopg[binary]>=3.2.9",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
production = [
    "gunicorn>=23.0.0",
]