[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "django>=6.0.6",
    "django-admin-interface>=0.32.0",
    "django-debug-toolbar>=7.0.0",
    {% if cookiecutter.use_drf == "y" %}
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "django-cors-headers>=4.9.0",
    "drf-spectacular>=0.29.0",
    {% endif %}
    "django-environ>=0.14.0",
    "django-extensions>=4.1",
    "psycopg[binary]>=3.3.4",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
production = [
    "gunicorn>=26.0.0",
]